prevent pictures from overflowing the screen - looks better on mobile
git-svn-id: http://www.xpra.org/svn/Xpra@16707 3bb7dfac-3a0b-4e04-842a-767bc560f471

--- a/web/main.css
+++ b/web/main.css
@@ -11,6 +11,9 @@ body{
 	background:#DADCE0;
 }
 
+img {
+	max-width: 100%; height: auto;
+}
 
 a{
 	color:#3874EE;
